terminado new collection

--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
                     <img src="./asset/img/new1.png" alt="" class="mew__mes-img">
                     <h3 class="new__title">Mens Shoes</h3>
                     <span class="new__preci">From $79,99</span>
-                    <a href="#" class="button-ligth">View collection <i class='bx bx-right-arrow-alt button-icon'></i></a>
+                    <a href="#" class="button-light">View collection <i class='bx bx-right-arrow-alt button-icon'></i></a>
                 </div>
                 <div class="new__sneaker">
                     <div class="new__sneaker-card">
