--- a/index.html
+++ b/index.html
@@ -191,6 +191,19 @@
                 </div>
             </div>
         </section>
+        <!--newsletter-->
+        <section class="newsletter section">
+            <div class="newsletter__container bd-grid">
+                <div>
+                    <h3 class="newsletter__title">Subscribe and Get <br> 10% OFF </h3>
+                    <a href="#" class="newsletter__description">Get 10% discount for all products</a>
+                </div>
+                <form action="" class="newsletter__subscribe">
+                    <input type="text" placeholder="@email.com" class="newsletter__input">
+                    <a href="#" class="button">Subscribe</a>
+                </form>
+            </div>
+        </section>
 
     </main>
 
