modo nocturno terminado

--- a/shop.html
+++ b/shop.html
@@ -27,8 +27,14 @@
                     <li class="nav__item"><a href="#shop" class="nav__link active">Shop</a></li>
                 </ul>
             </div>
-            <div class="nav__shop">
-                <i class='bx bx-shopping-bag'></i>
+            <div class="nav__btns">
+                <!--theme change button-->
+                <i class='bx bx-moon change__theme' id="theme-button"></i>
+
+                <div class="nav__shop">
+                    <i class='bx bx-shopping-bag'></i>
+                </div>
+
             </div>
         </nav>
 
