--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
             <div class="newsletter__container bd-grid">
                 <div>
                     <h3 class="newsletter__title">Subscribe and Get <br> 10% OFF </h3>
-                    <a href="#" class="newsletter__description">Get 10% discount for all products</a>
+                    <p href="#" class="newsletter__description">Get 10% discount for all products</p>
                 </div>
                 <form action="" class="newsletter__subscribe">
                     <input type="text" placeholder="@email.com" class="newsletter__input">
