--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
     <header class="l-header" id="header">
         <nav class="nav bd-grid">
             <div class="nav__toggle" id="nav-toggle">
-                <i class='bx bxs-grid'></i>
+                <i class='bx bxs-grid '></i>
             </div>
-            <a href="#" class="nav__logo">Roby</a>
+            <a href="#" class="nav__logo">VIRTUAL SHOP</a>
             <div class="nav__menu" id="nav-menu">
                 <ul class="nav__list">
                     <li class="nav__item"><a href="#home" class="nav__link active">Home</a></li>
@@ -34,7 +34,7 @@
                 <i class='bx bx-moon change__theme' id="theme-button"></i>
 
                 <div class="nav__shop">
-                    <i class='bx bx-shopping-bag'></i>
+                    <i class='bx bx-shopping-bag '></i>
                 </div>
 
             </div>
@@ -51,7 +51,7 @@
             <div class="home__container bd-grid">
                 <div class="home__sneakers">
                     <div class="home__shape"></div>
-                    <img src="asset/img/imghome.png" alt="" class="home__img">
+                    <img src="asset/img/jean-home.png" alt="" class="home__img">
                 </div>
 
                 <div class="home__data">
@@ -68,21 +68,21 @@
             <div class="featured__container bd-grid">
                 <article class="sneaker">
                     <div class="sneaker__sale">Sale</div>
-                    <img src="./asset/img/featured1.png" alt="" class="sneaker__img">
+                    <img src="./asset/img/jean-featured-1.png" alt="" class="sneaker__img">
                     <span class="sneaker__name">Nike Jordan</span>
                     <span class="sneaker__price">$149.99</span>
                     <a href="#" class="button-light">Add to cart <i class='bx bx-right-arrow-alt button-icon'></i></a>
                 </article>
                 <article class="sneaker">
                     <div class="sneaker__sale">Sale</div>
-                    <img src="./asset/img/featured2.png" alt="" class="sneaker__img">
+                    <img src="./asset/img/jean-featured-1.png" alt="" class="sneaker__img">
                     <span class="sneaker__name">Nike Jordan</span>
                     <span class="sneaker__price">$149.99</span>
                     <a href="#" class="button-light">Add to cart <i class='bx bx-right-arrow-alt button-icon'></i></a>
                 </article>
                 <article class="sneaker">
                     <div class="sneaker__sale">Sale</div>
-                    <img src="./asset/img/featured3.png" alt="" class="sneaker__img">
+                    <img src="./asset/img/jean-featured-1.png" alt="" class="sneaker__img">
                     <span class="sneaker__name">Nike Jordan</span>
                     <span class="sneaker__price">$149.99</span>
                     <a href="#" class="button-light">Add to cart <i class='bx bx-right-arrow-alt button-icon'></i></a>
@@ -91,6 +91,7 @@
             </div>
         </section>
         <!--colection-->
+        <!--
         <section class="collection section">
             <div class="collection__container bd-grid">
                 <div class="collection__card">
@@ -112,7 +113,9 @@
                         </div>
                 </div>
         </section>
+    -->
         <!--women sneakers-->
+        <!--
         <section class="women section" id="women">
             <h2 class="section-title">WOMEN SNEAKERS</h2>
 
@@ -147,6 +150,7 @@
         </div>
 
         </section>
+        -->
         <!--offer-->
         <section class="offer section">
             <div class="offer__container bd-grid">
@@ -155,10 +159,11 @@
                     <p class="offer__description">In Addidas superstar sneaker</p>
                     <a href="#" class="button">Shop now</a>
                 </div>
-                <img src="./asset/img/offert.png" alt="" class="offer__img">
+                <img src="./asset/img/jean-offert.png" alt="" class="offer__img">
             </div>
         </section>
         <!--new collection-->
+        <!--
         <section class="new section" id="new">
             <h2 class="section-title">NEW COLLECTION</h2>
 
@@ -200,6 +205,7 @@
                 </div>
             </div>
         </section>
+        -->
         <!--newsletter-->
         <section class="newsletter section">
             <div class="newsletter__container bd-grid">
@@ -220,7 +226,7 @@
     <footer class="footer section">
         <div class="footer__container bd-grid">
             <div class="footer__box">
-                <h3 class="footer__title">Ruby</h3>
+                <h3 class="footer__title">VIRTUAL SHOP</h3>
                 <p class="footer__description">New collection of shoes 2021</p>
             </div>
 
